Fix menu overflow on smaller screens

--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -17,6 +17,10 @@
     z-index: 1;
 }
 
+#menu .dropdown-menu {
+    left: calc(0vw - 120px);
+}
+
 a.icon > i {
     font-size: 24px;
 }
